WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161282
URLParser should parse relative URLs
https://bugs.webkit.org/show_bug.cgi?id=161282
Summary
URLParser should parse relative URLs
Alex Christensen
Reported
2016-08-26 18:45:01 PDT
URLParser should parse relative URLs
Attachments
Patch
(24.20 KB, patch)
2016-08-26 19:15 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(24.18 KB, patch)
2016-08-26 20:10 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews116 for mac-yosemite
(1023.39 KB, application/zip)
2016-08-26 21:13 PDT
,
Build Bot
no flags
Details
Patch
(24.60 KB, patch)
2016-08-27 13:54 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-08-26 19:15:38 PDT
Created
attachment 287188
[details]
Patch
Alex Christensen
Comment 2
2016-08-26 20:08:22 PDT
Comment on
attachment 287188
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=287188&action=review
> Source/WebCore/platform/URLParser.cpp:88 > +}
I'll ASSERT_NOT_REACHED() and return 0 here when committing.
Alex Christensen
Comment 3
2016-08-26 20:10:27 PDT
Created
attachment 287193
[details]
Patch
Build Bot
Comment 4
2016-08-26 21:13:09 PDT
Comment on
attachment 287193
[details]
Patch
Attachment 287193
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1951330
Number of test failures exceeded the failure limit.
Build Bot
Comment 5
2016-08-26 21:13:22 PDT
Created
attachment 287195
[details]
Archive of layout-test-results from ews116 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-yosemite Platform: Mac OS X 10.10.5
Alex Christensen
Comment 6
2016-08-26 23:51:13 PDT
Comment on
attachment 287193
[details]
Patch I need to change the assertion in StringView::CodePoints::Iterator::operator== from ASSERT(&m_stringView == &other.m_stringView); to ASSERT(&m_stringView.get() == &other.m_stringView.get()); Pretend I did that and that there are no more assertion failures when reviewing.
Alex Christensen
Comment 7
2016-08-27 13:54:53 PDT
Created
attachment 287212
[details]
Patch
WebKit Commit Bot
Comment 8
2016-08-27 22:57:06 PDT
Comment on
attachment 287212
[details]
Patch Clearing flags on attachment: 287212 Committed
r205097
: <
http://trac.webkit.org/changeset/205097
>
WebKit Commit Bot
Comment 9
2016-08-27 22:57:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug