URLParser should parse relative URLs https://bugs.webkit.org/show_bug.cgi?id=161282

Patch by Alex Christensen <achristensen@webkit.org> on 2016-08-27
Reviewed by Darin Adler.

Source/WebCore:

Partially covered by new API tests, but once the parser is complete enough we can
use the url web platform tests to more fully test this.  It's still a work in
progress only used by tests.

* platform/URLParser.cpp:
(WebCore::URLParser::urlLengthUntilPart):
(WebCore::URLParser::copyURLPartsUntil):
Added some helper functions to reduce redundant code.  When parsing relative URLs,
we often want to copy large parts of the base URL, but the stopping point differs.
(WebCore::URLParser::parse):
The parser now returns a URL instead of an Optional<URL> because a URL has a m_isValid which behaves like Optional.
* platform/URLParser.h:
(WebCore::URLParser::parse):

Source/WTF:

* wtf/text/StringView.h:
Use a std::reference_wrapper for the StringView& to make it reassignable so we can add an operator=.

Tools:

* TestWebKitAPI/Tests/WTF/StringView.cpp:
(TestWebKitAPI::TEST):
Added some tests for the new operator=.
Test saving iterators, restoring iterators, and even assigning iterators to new CodePoints objects.
Using the same iterator to iterate multiple objects is bad practice, but it's possible and now tested.
* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::checkURL):
(TestWebKitAPI::TEST_F):
(TestWebKitAPI::checkRelativeURL):
(TestWebKitAPI::checkURLDifferences):
(TestWebKitAPI::shouldFail):
Add some relative URL tests.

Canonical link: https://commits.webkit.org/179471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205097 268f45cc-cd09-0410-ab3c-d52691b4dbfc