Source/WebCore/platform/URLParser.h
@@ -31,17 +31,21 @@
 #include <wtf/text/StringBuilder.h>
 
 namespace WebCore {
-    
+
 class URLParser {
 public:
-    WEBCORE_EXPORT Optional<URL> parse(const String&, const URL& = { }, const TextEncoding& = UTF8Encoding());
+    WEBCORE_EXPORT URL parse(const String&, const URL& = { }, const TextEncoding& = UTF8Encoding());
     WEBCORE_EXPORT static bool allValuesEqual(const URL&, const URL&);
 private:
     URL m_url;
     StringBuilder m_buffer;
-    StringBuilder m_authorityOrHostBuffer;
+    StringBuilder m_authorityOrHostBuffer; // FIXME: Save the iterator at the end of the scheme instead of using a second buffer.
     void authorityEndReached();
     void hostEndReached();
+
+    enum class URLPart;
+    void copyURLPartsUntil(const URL& base, URLPart);
+    static size_t urlLengthUntilPart(const URL&, URLPart);
 };
 
 }
